fix Spacing in first item

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 
 nav {
   margin: 0 auto;
-  padding: 10px 0 15px 15px;
+  padding: 15px 0 15px 15px;
   position: fixed;
   width: 420px;
   background-color: #0A3066;
